# Char

./: .gitignore  FrameworkShaders  Package.swift  README.md
AppBundle/: Info.plist
Assets/Anim/: Default.anim
Assets/Epsilon/: companion-preset.json
Assets/Helen/: High school girl Kui.cdi3.json  High school girl Kui.moc3  High school girl Kui.model3.json  High school girl Kui.vtube.json  items_pinned_to_model.json
Assets/Helen (Head)/: High school girl Kui.moc3  High school girl Kui.model3.json  High school girl Kui.physics3.json  High school girl Kui.vtube.json  tushe.json
Assets/March 7/: companion-preset.json
Assets/Neko/: 165 204.cdi3.json  165 204.model3.json  165 204.physics3.json  165 204.vtube.json  companion-preset.json  items_pinned_to_model.json
Assets/Poses/: absolute-cinema.vrma  arms-crossed.vroidpose  default-2.vroidpose  default-3.vroidpose  default.vrma  default.vroidpose  fighting.vroidpose  fuck-you.vrma  grrr.vroidpose  hands-out.vroidpose  hands-out2.vroidpose.vrma  head-in-hand.vroidpose  idn.vrma  kneeling.vroidpose  lotus.vrma  nyan.vrma  sits-sad.vrma  sitting.vroidpose  thinking.vroidpose  this-way.vroidpose  touching-hair.vroidpose  wiping-nose.vroidpose  wow.vrma
Assets/VRMA/: action_attention_seeking.vrma  anger.vrma  anger2.vrma  iddle.vrma
Assets/akari/: akari.vtube.json
Assets/miara/: ReadMe.txt
Assets/shizuku/: companion-preset.json
Docs/: ANIMATION_EVENT_SYSTEM_SPEC.md  MEMORY_AND_EMOTION_SPEC.md  SPEC.md  VRM-Animation-Spec.md
Live2D/: CMakeLists.txt  build_live2d.sh
Live2D/src/: ShizukuMain.cpp
Sources/CharApp/: AppEnvironment.swift  BVHSupport.swift  CharApp.swift  CompanionViewModel.swift  CompanionViews.swift  CompanionWindowCoordinator.swift  KeychainStore.swift  Models.swift  OllamaClient.swift  PiperSupport.swift  SpeechCoordinator.swift  VRMAPlayer.swift  XTTSSupport.swift
Sources/Live2DBridge/include/: Live2DBridge.h
Sources/Live2DBridge/src/: CompanionLive2DModel.cpp  CompanionLive2DModel.hpp  CompanionLive2DView.mm
scripts/: build_app.sh
